# nearsend-core

./: .gitattributes  .gitignore  Cargo.toml  LICENSE.md  Makefile  Migrate.md  Readme.md  package.json
ft/: Cargo.toml
ft/src/: lib.rs
res/: bulk_sender_old_vers.wasm  fungible_token.wasm
scripts/: config.js  migrate.mainnet.js  migrate.testnet.js
shell-script/: build.sh
src/: events.rs  lib.rs
tests/sim/: macros.rs  main.rs  utils.rs
